--- a/examples/express/tsconfig.json
+++ b/examples/express/tsconfig.json
@@ -16,15 +16,11 @@
     "noEmit": true,
 
     /* Linting */
-    "strict": true,
+    "noImplicitAny": false,
+    "strict": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
-  },
-  "include": [
-    "src",
-    "test",
-    "examples",
-    "node_modules/vitest/globals.d.ts"
-  ]
+    "noFallthroughCasesInSwitch": true,
+    "allowSyntheticDefaultImports": true
+  }
 }
