--- a/package.json
+++ b/package.json
@@ -2,19 +2,29 @@
   "name": "di",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
   "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
+    }
+  },
+  "main": "./dist/index.cjs",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "vitest"
+    "test": "vitest",
+    "build": "vitest run & npx unbuild"
   },
-  "dependencies": {
-
-  },
+  "dependencies": {},
   "devDependencies": {
     "vite": "^4.2.2",
     "tsx": "^3.12.6",
     "vitest": "^0.30.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "unbuild": "^1.2.1"
   },
   "keywords": [],
   "author": "",
