--- a/examples/express/package.json
+++ b/examples/express/package.json
@@ -1,11 +1,17 @@
 {
-  "name": "express",
+  "name": "express-example",
   "version": "1.0.0",
   "type": "module",
+  "scripts": {
+    "start": "tsx ./index.ts"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "@types/express": "^4.17.17",
     "cookie-parser": "^1.4.6",
     "@types/cookie-parser": "^1.4.3"
+  },
+  "devDependencies": {
+    "tsx": "^3.12.7"
   }
 }
