--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wssz/di",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "type": "module",
   "exports": {
@@ -16,17 +16,20 @@
   ],
   "scripts": {
     "test": "vitest",
-    "build": "vitest run & npx unbuild"
+    "build": "vitest run & unbuild"
   },
-  "dependencies": {},
   "devDependencies": {
-    "vite": "^4.2.2",
-    "tsx": "^3.12.6",
-    "vitest": "^0.30.1",
-    "typescript": "^5.0.4",
+    "vite": "^4.3.9",
+    "tsx": "^3.12.7",
+    "vitest": "^0.31.4",
+    "typescript": "^5.1.3",
     "unbuild": "^1.2.1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "keywords": ["DI", "Dependency injection", "typescript"],
+  "author": "Wszerad Martynowski",
+  "repository": {
+    "type": "npm",
+    "url": "https://www.npmjs.com/package/@wssz/di"
+  },
+  "license": "MIT"
 }
