--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,9 @@
     "target": "ES2020",
     "useDefineForClassFields": true,
     "module": "ESNext",
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": ["ES2020"],
     "types": ["vitest/globals"],
     "skipLibCheck": true,
-    "experimentalDecorators": true,
 
     /* Bundler mode */
     "moduleResolution": "node",
