--- a/examples/express/package.json
+++ b/examples/express/package.json
@@ -3,15 +3,16 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "tsx ./index.ts"
+    "start": "npx vite-node -w index.ts"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "@types/express": "^4.17.17",
+    "@types/express": "^4.17.21",
     "cookie-parser": "^1.4.6",
-    "@types/cookie-parser": "^1.4.3"
+    "@types/cookie-parser": "^1.4.6"
   },
   "devDependencies": {
-    "tsx": "^3.12.7"
+    "vite-node": "^0.34.6",
+    "vite": "^4.5.0"
   }
 }
