--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
   "name": "@wssz/di",
-  "version": "1.0.6",
+  "version": "2.0.0",
   "description": "",
   "type": "module",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
       "require": "./dist/index.cjs"
     }
   },
   "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "dev": "vitest",
     "test": "vitest run",
     "build": "unbuild"
   },
+  "dependencies": {
+    "std-env": "^3.5.0"
+  },
   "devDependencies": {
-    "vite": "^4.3.9",
-    "tsx": "^3.12.7",
-    "vitest": "^0.34.4",
-    "typescript": "^5.1.3",
-    "unbuild": "^1.2.1"
+    "vite": "^4.5.0",
+    "vitest": "^0.34.6",
+    "typescript": "^5.3.2",
+    "unbuild": "^2.0.0"
   },
   "keywords": ["DI", "Dependency injection", "typescript"],
   "author": "Wszerad Martynowski",
