--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "types": ["vitest/globals"],
     "skipLibCheck": true,
 
+    "experimentalDecorators": true,
     /* Bundler mode */
     "moduleResolution": "node",
     "allowImportingTsExtensions": true,
