--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,7 +15,7 @@ jobs:
           registry-url: https://registry.npmjs.org/
           always-auth: true
           scope: wssz
-      - run: npm ci
+      - run: npm i
       - run: npm test
       - run: npm run build
       - run: npm publish --access public
